admission/ValidatingAdmissionPolicy/policies/privileged/containers/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: privileged-containers
  annotations:
    kubeapt.io/uuid: "2873ca8e-c322-4e60-8bb2-aebf881490f9"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
    securityContext:
      privileged: true
