admission/ValidatingAdmissionPolicy/policies/privileged/containers/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: container-privileged
  annotations:
    kubeapt.io/uuid: "2873ca8e-c322-4e60-8bb2-aebf881490f9"
    security.kubeapt.io/displayName: "Runs in Privileged Mode"
    security.kubeapt.io/description: "A privileged container disables almost all container isolation and gets full root access to the node devices, kernel interfaces and filesystem, which is a direct path to node and cluster takeover."
    security.kubeapt.io/resource: "Containers"
    security.kubeapt.io/severity: "Critical"
    security.kubeapt.io/remediation: "Remove securityContext.privileged from every container or set it to false. Field: spec.containers[*].securityContext.privileged."
    security.kubeapt.io/product: "Kubernetes"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:
      - ''
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validations:
  - expression: |
      (has(object.spec.os) &&
       has(object.spec.os.name) &&
       object.spec.os.name.lowerAscii() == "windows") ||
      object.spec.containers.all(c,
        !has(c.securityContext) ||
        !has(c.securityContext.privileged) ||
        c.securityContext.privileged == false
      )
    message: |
      Privileged containers are disallowed. All spec.containers[*].securityContext.privileged must be undefined or false.
